--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Infinite Realms</title>
+    <title>Atlas Cortex</title>
 
     <!-- Load Ionicons from CDN -->
     <link rel="stylesheet"
